<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPhotoActivity">

    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/photo_description" />

    <!-- Save and Replace buttons container (appears above the other buttons) -->
    <LinearLayout
        android:id="@+id/saveReplacePanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttonPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonReplace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replace" />

    </LinearLayout>

    <!-- The button panel for Greyscale, Revert, Undo, Delete -->
    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/buttonGreyscale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greyscale" />

        <Button
            android:id="@+id/buttonInvertColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/revert" />

        <Button
            android:id="@+id/buttonUndo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undo" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
